Implementing products section. Fixing contacts form layout on small screens.

--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,62 @@
 	background-color: white;
 }
 
+.products-column {
+	max-width: 40%;
+	margin: 0px 20px 20px 20px;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.products-column h2 {
+	font-weight: bold;
+	color: #666666;
+}
+
+.products-column h3 {
+	color: #E96944;
+	font-size: 16px;
+	margin-bottom: 0px;
+	padding: 10px;
+	text-align: left;
+}
+
+.products-column hr {
+	margin: 0px 0px 20px 0px;
+	border-color: #E96944;
+	border-style: solid;
+	color: #E96944;
+	width: 100%;
+}
+
+.app {
+	text-align: left;
+}
+
+.app-icon, .app-info {
+	vertical-align: middle;
+	display: inline-block;
+	max-width: 60%;
+}
+
+.app-icon {
+	margin: 10px;
+}
+
+.app-info {
+	margin: 0px 10px;
+	text-align: left;
+}
+
+.app-info .app-name {
+	margin: 0px;
+}
+
+.app-description {
+	color: #666666;
+	font-weight: 300;
+}
+
 #about {
 	background-color: #F9F9F9;
 }
@@ -83,6 +139,10 @@
 /* Contacts Form
 /*
 /*****************************************************************************/
+
+#contacts-form {
+	max-width: 94%;
+}
 
 #contacts-form-message {
 	height: 150px;
